--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,23 +11,25 @@
   "dependencies": {
     "@dust-tt/client": "^1.1.16",
     "@supabase/supabase-js": "^2.58.0",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
