cleanup: Remove MCP server and analysis agents
- Removed mcp-server/ directory (should not be in this repo)
- Removed integrated-agent.js and team-analysis-agent.js
- Updated .gitignore to prevent these files from being committed again

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ Thumbs.db
 *.swp
 *.swo
 *~
+
+# MCP server and analysis agents (should not be in this repo)
+mcp-server/
+integrated-agent.js
+team-analysis-agent.js
